--- a/htmlcss/styles/_functions.sass
+++ b/htmlcss/styles/_functions.sass
@@ -4,5 +4,11 @@
 @function get-color($name)
   @return map-get($colors, $name)
 
-@function get-padding($name)
-  @return map-get($padding, $name)
+@function get-p-desktop($name)
+  @return map-get($p-desktop, $name)
+
+@function get-p-tablet($name)
+  @return map-get($p-tablet, $name)
+
+@function get-p-mobile($name)
+  @return map-get($p-mobile, $name)
