--- a/htmlcss/styles/_variables.sass
+++ b/htmlcss/styles/_variables.sass
@@ -1,7 +1,6 @@
-$colors: ( "bg-green": #4c8930, "bg-gray": #eceeef, "text-gray": #999999, "bg-white": white, "bg-black": black)
-
+$colors: ("bg-green": #4c8930, "bg-gray": #eceeef, "text-gray": #999999, "bg-white": white, "bg-black": black)
 $font: 'Open Sans', sans-serif
-
-$font-size: ("desktop": 16px, "tablet": 16px, "mobile": 12px)
-
-$padding: ( "p-st": 9vw, "p-nd": 21vw, "p-rd": 33vw)
+$font-size: ("desktop": 16px, "tablet": 14px, "mobile": 10px)
+$p-desktop: ("p-st": 9vw, "p-nd": 21vw, "p-rd": 33vw)
+$p-tablet: ("p-st": 3vw, "p-nd": 10vw, "p-rd": 23vw)
+$p-mobile: ("p-st": 3vw, "p-nd": 8vw, "p-rd": 23vw)
