--- a/htmlcss/styles/_mixins.sass
+++ b/htmlcss/styles/_mixins.sass
@@ -1,5 +1,8 @@
-@mixin st-custom-tb($value-tb)
-  padding: $value-tb get-padding(p-st)
+@mixin respond($breakpoint)
+  @if($breakpoint == medium)
+    @media (max-width: 1024px)
+      @content
 
-@mixin nd-custom-tb($value-tb)
-  padding: $value-tb get-padding(p-nd)
+  @if($breakpoint == small)
+    @media (max-width: 667px)
+      @content
